animaciones/transiciones y correcciones grid

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CocoritaDecoHogar</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../ccs/estilos.css">
 </head>
 
@@ -29,32 +30,40 @@
                         <ul>
                             <li><a href="../index.html" >Inicio</a></li>
                             <li><a href="../pages/Nosotros.html">Nosotros</a></li>
-                            <li><a href="../pages/Productos.html" class="marcar">Productos</a></li>
-                            <li><a href="./pages/contacto.html">Contacto</a></li>
+                            <li><a href="../pages/Productos.html">Productos</a></li>
+                            <li><a href="../pages/contacto.html">Contacto</a></li>
                             <li><a href="../pages/Ingresar.html">Ingresar</a></li>
                         </ul>
                     </nav>
                 </header>
                 </div>
             </div>
-        <div box3>
+        <div class="box3">
+            <div class="contenedorContacto">
+                <div class="tituloContacto">
             <h1 class="tituloContacto">Contacto</h1><br><br>
-            <article>
+        </div>
+            <div class="pContacto">
                 <p class="pContacto">No dudes en realizar tu consulta por cualquier medio de contacto, o tambien podes
                     acercarte a nuestro showroom, estaremos atentos siempre para brindarte la mejor atención</p>
-            </article><br><br>
-            <div>
-
+            </div><br><br>
+            <div class="informacionContacto">
+                <div>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13510.503317243507!2d-63.900046680468506!3d-32.16039464859834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cd124847d57709%3A0x1fe921fa9bc4d823!2sVilla%20Ascasubi%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1648420464435!5m2!1ses!2sar"
                     width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe><br><br>
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div>
                 <p> Villa Ascasubi</p><br>
                 <strong> Horarios de Atención:</strong> Lunes a Viernes de 08:00 hs a 13:00 hs <br><br>
                 <strong> Teléfono:</strong>03571-15614756<br><br>
                 <strong> Mail:</strong> carogonzalez722@gmail.com
-            </div><br><br>
-            <h2 class="subtituloConsultanos">Consultanos</h2><br>
+            </div>
+            </div>
+            <div class="subtituloContacto">
+            <h2 class="subtituloConsultanos">Consultanos</h2>
+        </div>
             <div class="cajaFormulario">
                 <form>
                     <label for="nombre-usuario"></label>
@@ -87,6 +96,7 @@
                             placeholder="Escribe tu mensaje" required></textarea><br>
                         <input type="submit" value="Enviar"><br><br>
                 </form>
+            </div>
             </div>
 
             <div class="iconoWp">
