--- a/pages/ingresar.html
+++ b/pages/ingresar.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CocoritaDecoHogar</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../ccs/estilos.css">
 </head>
 
@@ -27,7 +28,7 @@
                         <div class="barra">
                             <nav>
                                 <ul>
-                                    <li><a href="../index.html" class="marcar">Inicio</a></li>
+                                    <li><a href="../index.html">Inicio</a></li>
                                     <li><a href="../pages/Nosotros.html">Nosotros</a></li>
                                     <li><a href="../pages/Productos.html">Productos</a></li>
                                     <li><a href="../pages/contacto.html">Contacto</a></li>
