--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CocoritaDecoHogar</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../ccs/estilos.css">
 </head>
 
@@ -39,16 +40,23 @@
             </div>
             <div class="box3">
             <div class="contenedorNos">
-                <h1>Bienvenidos</h1>
-                <h2>A nuestro pequeño sueño...</h2>
+                <div>
+                    <img src="../img/nosotros/Nosotros1.png" alt="">
+                </div>
+                <div>
+                <h1 class="animate__animated animate__fadeInDown">Bienvenidos</h1>
+            </div>
+            <div>
+                <p class="animate__animated animate__fadeInLeft">A nuestro pequeño sueño...</p>
+            </div>
             </div>
             <article>
                 <!-- <img src="../img/Nosotros/Nosotros1.png" alt="foto donde muestra imagenes abstractas y
             los textos hola y te contamos de nosotros" class="imgNosotros">
             </article> -->
-            <h2 class="tituloNosotros">Nuestra Historia</h2><br><br>
+            <h2 class="centrar">Nuestra Historia</h2>
             <article>
-                <p class="textoNosotros">
+                <p class="textoNosotros animate__animated animate__fadeInUp">
                     Hola a todos, somos Damián y Carolina y estamos orgullosos de presentar nuestro proyecto "Cocorita
                     Deco-Hogar". Comenzamos en el años 2019 realizando compras por pedido y luego comenzamos a contar
                     con stock,
@@ -63,7 +71,7 @@
                 </ul><br><br>
 
             </article>
-            <h2 class="subtituloNosotros">Nuestro Objetivo</h2><br>
+            <h2 class="centrar">Nuestro Objetivo</h2><br>
             <article>
                 <p class="textoNosotros">
                     Nuestro objetivo es desarrollar un estilo de venta en el cuales los beneficiados siempre sean
