--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CocoritaDecoHogar</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../ccs/estilos.css">
 </head>
 
@@ -38,9 +39,12 @@
                 </div>
             </div>
             <div class="box3">
-                <div class="contenedorBanner">
+                <div class="contenedorBannerP">
+                    <div>
+                        <img src="../img/bannerProductos/bannerProductos.png" alt="">
+                    </div>
                     <div class="tituloBanner">
-                        <h2 class="tituloBanner">Tienda Online</h2>
+                        <p class="tituloBanner">Tienda Online</p>
                     </div>
                     <div class="textoBanner">
                         <p class="textoBanner">Envíos a todo el país</p>
@@ -48,9 +52,10 @@
                         <p class="textoBanner">Sin mínimo por productos</p>
                     </div>
                 </div>
-            <h1 class="tituloProductos">Conoce nuestro Catálogo Online</h1><br><br>
+            <h1 class="tituloProductos">Conoce nuestro Catálogo Online</h1><br>
+            <div class="centrar">
             <h2>Productos</h2><br><br>
-
+        </div>
                 <section class="galeria">
                     <div class="./img1 img1">Cocina</div>
                     <div class="img img2">Dormitorio</div>
