--- a/pages/productos.html
+++ b/pages/productos.html
@@ -29,10 +29,10 @@
                     <nav>
                         <ul>
                             <li><a href="../index.html" >Inicio</a></li>
-                            <li><a href="../pages/Nosotros.html">Nosotros</a></li>
-                            <li><a href="../pages/Productos.html" class="marcar">Productos</a></li>
+                            <li><a href="../pages/nosotros.html">Nosotros</a></li>
+                            <li><a href="../pages/productos.html" class="marcar">Productos</a></li>
                             <li><a href="../pages/contacto.html">Contacto</a></li>
-                            <li><a href="../pages/Ingresar.html">Ingresar</a></li>
+                            <li><a href="../pages/ingresar.html">Ingresar</a></li>
                         </ul>
                     </nav>
                 </header>
