--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -28,8 +28,8 @@
                 <div class="barra">
                     <nav>
                         <ul>
-                            <li><a href="../index.html" >Inicio</a></li>
-                            <li><a href="../pages/nosotros.html" class="marcar">Nosotros</a></li>
+                            <li><a href="../index.html">Inicio</a></li>
+                            <li><a href="../pages/nosotros.html">Nosotros</a></li>
                             <li><a href="../pages/productos.html">Productos</a></li>
                             <li><a href="../pages/contacto.html">Contacto</a></li>
                             <li><a href="../pages/ingresar.html">Ingresar</a></li>
