--- a/index.html
+++ b/index.html
@@ -8,35 +8,39 @@
     <title>CocoritaDecoHogar</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="./ccs/estilos.css">
 </head>
 
 <body>
-    <main>
-        <div class="contenedor">
-            <div class="box1">
+        <!-- <div class="contenedor">
+            <div class="box1"> -->
+<!-- HEADER-NAVBAR ----------------------------------------------------------------------------------------->
 <header>
-            
-                <div class="header">
-                    <div class="logo">
-                        <p>Cocorita <span>Deco-Hogar</span></p>
-                    </div>
-                </div>
-            </div>
-            <div class="box2">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+        <a class="navbar-brand" href="#">Cocorita <span>Deco-Hogar</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav justify-content-end w-100">
+            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link disabled">Disabled</a>
+          </div>
+        </div>
+      </nav>   
+    </header>
+    <!-- CUERPO DE LA WEB ----------------------------------------------------------------------------------->
+    <main class="container-fluid">
+    <!-- BANNER --------------------------------------------------------------------------------------------->
+<section>
 
-                <div class="barra">
-                    <nav>
-                        <ul>
-                            <li><a href="./index.html" class="marcar">Inicio</a></li>
-                            <li><a href="./pages/nosotros.html">Nosotros</a></li>
-                            <li><a href="./pages/productos.html">Productos</a></li>
-                            <li><a href="./pages/contacto.html">Contacto</a></li>
-                            <li><a href="./pages/ingresar.html">Ingresar</a></li>
-                        </ul>
-                    </nav>
-                </header>
-                </div>
+</section>
+
+    </main>
+                <!-- </div>
             </div>
             <div class="box3">
                 <div class="contenedorBanner">
@@ -175,6 +179,9 @@
             </div>
             </div>
         </div>
-    </main>
+    </main> -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 </body>
 </html>
