--- a/index.html
+++ b/index.html
@@ -129,15 +129,22 @@
     </div>
     
 <!-- BOTONES MEDIO DE PAGO -->
+<div class="container">
 <section class="row">
-    <div class="botonesMedioPago justify-content-center">
-    <button type="button" class="btn btn-outline-secondary">Tarjetas de Débito</button>
+    <div class=" col-md-3 ">
+    <button type="button" class="btn btn-outline-secondary ">Tarjetas de Débito</button>
+</div>
+    <div class="col-md-3">
     <button type="button" class="btn btn-outline-secondary">Tarjetas de Crédito</button>
+</div>
+<div class="col-md-3">
     <button type="button" class="btn btn-outline-secondary">Transferencias Bancarias</button>
+</div>
+<div class="col-md-3">
     <button type="button" class="btn btn-outline-secondary">Efectivo</button>
 </div>
 </section>
-
+</div>
 <!-- MINI FORMULARIO----------------------------------------------------------------------------- -->
 <section id="formCatalogo" class="my-5">
 <div class="row p-4 shadow p-3 mb-5 bg-body rounded">
