--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -47,9 +47,9 @@
     </nav>
 <section class="container">
     <div class="row">
-    <h2 class="aling-center col-6 parrafoNosotros">Nuestra Historia</h2>
-            <article class=" col-6">
-                <p>
+    <h2 class="aling-center col-6">Nuestra Historia</h2>
+            <article class=" col-6 ">
+                <p class="pNos">
                     Hola a todos, somos Damián y Carolina y estamos orgullosos de presentar nuestro proyecto "Cocorita
                     Deco-Hogar". Comenzamos en el años 2019 realizando compras por pedido y luego comenzamos a contar
                     con stock,
