--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,19 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CocoritaDecoHogar</title>
+    <meta name="description" content="Si tenes consultas o dudas consultanos a traves del medio de contacto mas util para vos">
+    <meta name="keywords" content="CONTACTO, LLAMADO, TELEFONO, MAIL, DIRECCION, CONSULTAS, PREGUNTAS, PEDIDOS, ESCRIBIR,">
+    <meta name="author" content="Carolina Gonzalez">
+    <meta name="title" content="Contactanos, estamos para ayudarte">
+    <meta name="ROBOTS" content="ALL">
+    <meta name="lenguage" content="Spanish">
+    <meta name="city" content="Cordoba">
+    <meta name="country" content="Argentina">
+    <title>Contactanos</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="../ccs/estilos.css">
+    <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 
 <body>
     <!-- HEADER-NAVBAR ----------------------------------------------------------------------------------------->
     <nav class="navbar navbar-expand-md  navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Cocorita Deco-Hogar</a>
+        <p class="logoNav navbar-brand">Cocorita Deco-Hogar</p>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -25,7 +33,7 @@
         </button>
 
         <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <div class="pagesNav collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav justify-content-end w-100">
                 <li class="nav-item ">
                     <a class="nav-link" href="../index.html">Inicio</a>
@@ -46,7 +54,7 @@
         </div>
     </nav>
     <!-- informacion contacto------------------------------------------------------------------------------- -->
-    <h2>Contactate con Nosotros</h2>
+    <h1>Contactate con Nosotros</h1>
     <article class="pContacto">
         <p class="pContacto">No dudes en realizar tu consulta por cualquier medio de contacto, o tambien podes
             acercarte a nuestro showroom, estaremos atentos siempre para brindarte la mejor atención</p>
@@ -133,7 +141,7 @@
 
     <footer>
         <div>
-            <h1 class="tituloFooter">Cocorita Deco-Hogar</h1>
+            <h2 class="tituloFooter">Cocorita Deco-Hogar</h2>
         </div>
         <section class="container-fluid">
             <div class="row">
