--- a/pages/ingresar.html
+++ b/pages/ingresar.html
@@ -5,19 +5,27 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CocoritaDecoHogar</title>
+        <meta name="description" content="Inicia tu sesion o registra tu cuenta para comenzar a disfrutar de los beneficios de nuestro sitio web">
+        <meta name="keywords" content="LOGIN, SESION, REGISTRO, CUENTA, MAIL, CONTRASEÑA,">
+        <meta name="author" content="Carolina Gonzalez">
+        <meta name="title" content="Registrate en nuestro sitio web y que comience tu cambio">
+        <meta name="ROBOTS" content="ALL">
+        <meta name="lenguage" content="Spanish">
+        <meta name="city" content="Cordoba">
+        <meta name="country" content="Argentina">
+        <title>Inicio de Sesion</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
             integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-        <link rel="stylesheet" href="../ccs/estilos.css">
+        <link rel="stylesheet" href="../estilos/estilos.css">
     </head>
 
 <body>
     <!-- HEADER-NAVBAR ----------------------------------------------------------------------------------------->
     <nav class="navbar navbar-expand-md  navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Cocorita Deco-Hogar</a>
+        <p class="logoNav navbar-brand">Cocorita Deco-Hogar</p>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -25,7 +33,7 @@
         </button>
 
         <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <div class="pagesNav collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav justify-content-end w-100">
                 <li class="nav-item ">
                     <a class="nav-link" href="../index.html">Inicio</a>
@@ -46,7 +54,7 @@
         </div>
     </nav>
                     
-            <h1 class="tituloIngresar">Bienvenidos, gracias por formar parte de nuestra comunidad!</h1><br><br>
+            <h1 class="tituloIngresar">¡Bienvenidos, gracias por formar parte de nuestra comunidad!</h1><br><br>
 
             <article>
                 <p class="textoIngresar">Comprá más rápido y llevá el control de tus pedidos, ¡en un solo lugar!</p>
@@ -88,7 +96,7 @@
             <h2>Muchas Gracias por visitar nuestro sitio web :)</h2><br><br>
             <footer>
                 <div>
-                    <h1 class="tituloFooter">Cocorita Deco-Hogar</h1>
+                    <h2 class="tituloFooter">Cocorita Deco-Hogar</h2>
                 </div>
                 <section class="container-fluid">
                     <div class="row">
