--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,19 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tienda Online de nuestros productos, donde podras realizar todas las compras sin moverte de casa">
+    <meta name="keywords" content="FRASCOS, ALFOMBRA, ESPEJOS, ADORNOS, REPISAS, JARDIN, COCINA, BAÑO, DORMITORIOS, MACETAS, CANASTOS">
+    <meta name="author" content="Carolina Gonzalez">
+    <meta name="title" content="Nuestra Tienda Online-Tu sitio seguro para comprar">
+    <meta name="ROBOTS" content="ALL">
+    <meta name="lenguage" content="Spanish">
+    <meta name="city" content="Cordoba">
+    <meta name="country" content="Argentina">
     <title>CocoritaDecoHogar</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="../ccs/estilos.css">
+    <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 
 <body>
     <!-- HEADER-NAVBAR ----------------------------------------------------------------------------------------->
     <nav class="navbar navbar-expand-md  navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Cocorita Deco-Hogar</a>
+        <p class="logoNav navbar-brand">Cocorita Deco-Hogar</p>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -25,7 +33,7 @@
         </button>
 
         <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <div class="pagesNav collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav justify-content-end w-100">
                 <li class="nav-item ">
                     <a class="nav-link" href="../index.html">Inicio</a>
@@ -65,7 +73,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/baner/fondo producto1.png" class="d-block w-100" alt="...">
+                    <img src="../img/baner/fondo producto1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Compra mínima $3000</h5>
                             <p>Some representative placeholder content for the second slide.</p>
@@ -227,7 +235,7 @@
     <!-- FOOTER-------------------------------------------------------------------------------- -->
     <footer>
         <div>
-            <h1 class="tituloFooter">Cocorita Deco-Hogar</h1>
+            <h2 class="tituloFooter">Cocorita Deco-Hogar</h2>
         </div>
         <section class="container-fluid">
             <div class="row">
