--- a/pages/ingresar.html
+++ b/pages/ingresar.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-md  navbar-dark">
         <!-- Brand -->
         <div class="navbar-brand logoNav">
-            <a class="navbar-brand logoNav" href="./index.html">
+            <a class="navbar-brand logoNav" href="../index.html">
                 <p>Cocorita Deco-Hogar</p>
             </a>
         </div>
